--- a/public/latest/assets/admin-css/dashboard.css
+++ b/public/latest/assets/admin-css/dashboard.css
@@ -106,6 +106,85 @@ main .container-fluid {
   padding: 0.3rem 0.5rem;
 }
 
+.course-lists {
+  margin-left: 1.5rem;
+}
+.course-lists .media {
+  align-items: center;
+  margin-top: 1rem;
+}
+.course-lists .media img {
+  margin-right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.course-lists .media h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.375rem;
+}
+.course-lists .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  /* 150% */
+}
+
+.messages-items-wrap {
+  margin-top: 1rem;
+}
+.messages-items-wrap .messages-item .media {
+  align-items: center;
+}
+.messages-items-wrap .messages-item .media .avatar {
+  position: relative;
+  margin-right: 1rem;
+}
+.messages-items-wrap .messages-item .media .avatar img {
+  width: 0.2em 0.4rem;
+  height: 2.4rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+.messages-items-wrap .messages-item .media .avatar i {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  font-size: 8px;
+  color: #D0D5DD;
+}
+.messages-items-wrap .messages-item .media h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.375rem;
+}
+.messages-items-wrap .messages-item .media h5 span {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 12px;
+  display: inline-block;
+  margin-left: auto;
+}
+.messages-items-wrap .messages-item .media p {
+  overflow: hidden;
+  color: var(--neutral-color-neutral-60, #66768E);
+  text-overflow: ellipsis;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  /* 150% */
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   main .container-fluid {
     padding: 0 1rem;
