--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -108,7 +108,7 @@ main {
         a {
             border-radius: 0.375rem;
             background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
-            color: var(--neutral-color-neutral-90, #101C2D); 
+            color: var(--neutral-color-neutral-90, #101C2D);
             font-size: 0.75rem;
             font-style: normal;
             font-weight: 700;
@@ -116,6 +116,98 @@ main {
             /* 166.667% */
             display: inline-block;
             padding: .3rem .5rem;
+        }
+    }
+
+
+}
+
+.course-lists {
+    margin-left: 1.5rem;
+
+    .media {
+        align-items: center;
+        margin-top: 1rem;
+
+        img {
+            margin-right: 1rem;
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        h5 {
+            color: var(--neutral-color-neutral-90, #101C2D);
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 1.375rem;
+        }
+
+        p {
+            color: var(--neutral-color-neutral-60, #66768E);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.125rem;
+            /* 150% */
+        }
+    }
+}
+
+.messages-items-wrap {
+    margin-top: 1rem;
+
+    .messages-item {
+        .media {
+            align-items: center;
+
+            .avatar {
+                position: relative;
+                margin-right: 1rem;
+
+                img {
+                    width: 0.2em 0.4rem;
+                    height: 2.4rem;
+                    object-fit: cover;
+                    border-radius: 50%;
+
+                }
+
+                i {
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
+                    font-size: 8px;
+                    color: #D0D5DD;
+                }
+            }
+
+            h5 {
+                color: var(--neutral-color-neutral-90, #101C2D);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 1.375rem; 
+                span{
+                    color: var(--neutral-color-neutral-60, #66768E);
+                    font-size: 12px;
+                    display: inline-block;
+                    margin-left: auto;
+                }
+            }
+
+            p {
+                overflow: hidden;
+                color: var(--neutral-color-neutral-60, #66768E);
+                text-overflow: ellipsis; 
+                font-size: 0.75rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.125rem;
+                /* 150% */
+            }
         }
     }
 }
