--- a/public/latest/assets/auth-css/auth.css
+++ b/public/latest/assets/auth-css/auth.css
@@ -476,6 +476,11 @@
   font-style: normal;
   font-weight: 400;
   line-height: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.feat-box .media input{
+  width: 50%;
 }
 
 .feat-box .media img {
@@ -615,10 +620,11 @@
 }
 
 .uploaded-file img {
-  max-width: 80px;
-  max-height: 60px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
+ 
 
 .uploaded-file-close {
   position: absolute;
