--- a/scss/user.scss
+++ b/scss/user.scss
@@ -59,19 +59,19 @@
             border-radius: 0.375rem;
             background: var(--background-light-paper, #FFF);
             box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
-            transform: translate3d(54.6px, -25.6px, 0px)!important;
+            transform: translate3d(54.6px, -25.6px, 0px) !important;
             padding: .5rem;
             border: 0;
 
             li {
                 .dropdown-item {
                     overflow: hidden;
-                    color: var(--neutral-color-neutral-90, #101C2D); 
+                    color: var(--neutral-color-neutral-90, #101C2D);
                     font-family: Inter;
                     font-size: 0.875rem;
                     font-style: normal;
                     font-weight: 400;
-                    line-height: 1.375rem; 
+                    line-height: 1.375rem;
                     display: inline-block;
                     padding: .5rem .8rem;
                     border-radius: 8px;
@@ -154,14 +154,196 @@
     }
 }
 
+// user details page
+.user-profile-picture {
+    border-radius: 1rem;
+    border: 1px solid var(--neutral-40, #E0E0E0);
+    background: var(--neutral-10, #FFF);
+
+    .cover-img {
+        img {
+            display: block;
+            width: 100%;
+            border-radius: 10px 10px 0 0;
+        }
+    }
+
+    .media {
+        background-color: #fff;
+        padding: 1.5rem 2rem;
+        padding-bottom: 3.5rem;
+        align-items: flex-end;
+        margin-top: -6rem;
+        border-radius: 0 0 1rem 1rem;
+
+        img {
+            border-radius: 6.25rem;
+            border: 4px solid var(--neutral-10, #FFF);
+            width: 8.75rem;
+            height: 8.75rem;
+            object-fit: cover;
+            margin-right: 2rem;
+        }
+
+        span.avatar-box {
+            border-radius: 6.25rem;
+            border: 4px solid var(--neutral-10, #FFF);
+            width: 8.75rem;
+            height: 8.75rem;
+            object-fit: cover;
+            margin-right: 2rem;
+            font-size: 3.5rem;
+            background-color: #E0E0E0;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .media-body {
+            position: relative;
+            top: 1.5rem;
+
+            h3 {
+                color: var(--neutral-90, #252525);
+                font-size: 2rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 120%;
+
+            }
+
+            p {
+                color: var(--neutral-70, #7C7C7C);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 135%;
+                margin-top: 0.5rem;
+            }
+        }
+    }
+}
+
+.user-details-box {
+    margin-top: 2rem;
+    border-radius: 1rem;
+    border: 1px solid var(--neutral-40, #E0E0E0);
+    background: var(--neutral-10, #FFF);
+    padding: 1.5rem;
+
+    h2,
+    h3,
+    h4,
+    h5 {
+        color: var(--neutral-90, #252525);
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 120%;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        color: var(--neutral-70, #7C7C7C);
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 1rem;
+    }
+}
+
+.contact-info-box {
+    border-radius: 1rem;
+    border: 1px solid var(--neutral-40, #E0E0E0);
+    background: var(--neutral-10, #FFF);
+    padding: 1.5rem;
+
+    h4 {
+        color: var(--neutral-90, #252525);
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 120%;
+    }
+
+    .media {
+        margin-top: 1rem;
+        align-items: flex-start;
+
+        img {
+            margin-right: 1rem;
+            display: inline-block;
+            margin-top: 0.1rem;
+        }
+
+        .media-body {
+            h6 {
+                color: var(--neutral-90, #252525);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 135%;
+            }
+
+            a {
+                color: var(--primary-color-blue-dark, #0824B4);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%; 
+                display: block;
+            }
+        }
+    }
+}
+
+
 // small phone device
-@include q.responsive(phone) {}
+@include q.responsive(phone) {
+    .user-profile-picture .media{
+        padding: 1rem;
+        flex-direction: column;
+        margin-top: -2rem;
+        text-align: center;
+        align-items: center;
+        img{
+            margin: 0 auto; 
+            width: 6rem;
+            height: 6rem;
+        }
+        .media-body{
+            top: .4rem;
+            h3{
+                font-size: 1.5rem;
+            }
+            p{
+                font-size: .9rem;
+            }
+        }
+    }
+    .user-details-box{
+        padding: 1rem;
+    }
+    .contact-info-box{
+        margin-top: 2rem;
+        padding: 1rem;
+    }
+}
 
 // landscape phone device 
-@include q.responsive(landphone) {}
+@include q.responsive(landphone) {
+    .contact-info-box{
+        margin-top: 2rem; 
+    }
+}
 
 // tablet device 
-@include q.responsive(tablet) {}
+@include q.responsive(tablet) {
+    .contact-info-box{
+        margin-top: 2rem; 
+    }
+}
 
 // landtablet device 
 @include q.responsive(landtablet) {}
