--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -259,6 +259,139 @@
   display: block;
 }
 
+.user-header h2 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.25rem;
+  text-transform: capitalize;
+}
+
+.user-header-bttn {
+  text-align: right;
+}
+.user-header-bttn a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  padding: 0.75rem 1.5rem;
+  padding-left: 1.25rem;
+  color: #FFF;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  transition: all linear 0.3s;
+}
+.user-header-bttn a img {
+  margin-right: 0.25rem;
+}
+.user-header-bttn a:hover {
+  background-color: #101C2D;
+}
+
+.user-add-form-wrap {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+  padding: 1.5rem;
+  margin-top: 1.5rem;
+}
+.user-add-form-wrap form .form-group {
+  margin-bottom: 1.5rem;
+  position: relative;
+}
+.user-add-form-wrap form .form-group label {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-bottom: 0.4rem;
+}
+.user-add-form-wrap form .form-group .form-control {
+  border-radius: 0.375rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--neutral-color-white, #FFF);
+  height: 3.5rem;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  /* 142.857% */
+}
+.user-add-form-wrap form .form-group textarea {
+  resize: none;
+}
+.user-add-form-wrap form .form-group #url_increment {
+  position: absolute;
+  right: 0.75rem;
+  top: 2.7rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 1px solid #66768E;
+  border-radius: 50%;
+  font-size: 0.9rem;
+  color: #66768E;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: all linear 0.3s;
+}
+.user-add-form-wrap form .form-group #url_increment:hover {
+  background-color: #66768E;
+  color: #fff;
+}
+.user-add-form-wrap form .form-group .url-extra-field div {
+  position: relative;
+  margin-top: 0.5rem;
+}
+.user-add-form-wrap form .form-group .url-extra-field div a {
+  position: absolute;
+  right: 0.75rem;
+  top: 1.1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 1px solid #66768E;
+  border-radius: 50%;
+  font-size: 0.9rem;
+  color: #66768E;
+  display: inline-flex;
+  align-items: center;
+  transition: all linear 0.3s;
+  cursor: pointer;
+  justify-content: center;
+}
+.user-add-form-wrap form .form-group .url-extra-field div a:hover {
+  background-color: #66768E;
+  color: #fff;
+}
+.user-add-form-wrap form .form-group .mce-tinymce.mce-container.mce-panel {
+  border-radius: 0.5rem;
+  border: 1px solid var(--colors-components-input-outlined, rgba(145, 158, 171, 0.32));
+}
+.user-add-form-wrap form .custom-hr hr {
+  height: 0.0625rem;
+  border: 0;
+  width: 100%;
+  background: #E5ECF6;
+  margin: 0;
+}
+.user-add-form-wrap form .custom-hr h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2.25rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
     padding: 1rem;
