--- a/scss/user.scss
+++ b/scss/user.scss
@@ -291,41 +291,225 @@
                 font-size: 1rem;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 150%; 
+                line-height: 150%;
                 display: block;
             }
         }
     }
 }
 
+// user update
+.user-header {
+    h2 {
+        color: var(--neutral-color-neutral-90, #101C2D);
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 2.25rem;
+        text-transform: capitalize;
+    }
+}
+
+.user-header-bttn {
+    text-align: right;
+
+    a {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0.375rem;
+        background: var(--primary-color-blue, #294CFF);
+        padding: 0.75rem 1.5rem;
+        padding-left: 1.25rem;
+        color: #FFF;
+        font-size: 0.875rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5rem;
+        transition: all linear .3s;
+
+        img {
+            margin-right: 0.25rem;
+        }
+
+        &:hover {
+            background-color: #101C2D;
+        }
+    }
+}
+
+.user-add-form-wrap {
+    border-radius: 0.5rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: #FFF;
+    box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+    padding: 1.5rem;
+    margin-top: 1.5rem;
+
+    form {
+        .form-group {
+            margin-bottom: 1.5rem;
+            position: relative;
+
+            label {
+                color: var(--neutral-color-neutral-90, #101C2D);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.25rem;
+                margin-bottom: 0.4rem;
+            }
+
+            .form-control {
+                border-radius: 0.375rem;
+                border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+                background: var(--neutral-color-white, #FFF);
+                height: 3.5rem;
+                color: var(--neutral-color-neutral-60, #66768E);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.25rem;
+                /* 142.857% */
+            }
+
+            textarea {
+                resize: none;
+            }
+
+            #url_increment {
+                position: absolute;
+                right: 0.75rem;
+                top: 2.7rem;
+                width: 1.5rem;
+                height: 1.5rem;
+                border: 1px solid #66768E;
+                border-radius: 50%;
+                font-size: .9rem;
+                color: #66768E;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                transition: all linear .3s;
+
+                &:hover {
+                    background-color: #66768E;
+                    color: #fff;
+                }
+            }
+
+            .url-extra-field {
+                div {
+                    position: relative;
+                    margin-top: 0.5rem;
+
+                    a {
+                        position: absolute;
+                        right: 0.75rem;
+                        top: 1.1rem;
+                        width: 1.5rem;
+                        height: 1.5rem;
+                        border: 1px solid #66768E;
+                        border-radius: 50%;
+                        font-size: .9rem;
+                        color: #66768E;
+                        display: inline-flex;
+                        align-items: center;
+                        transition: all linear .3s;
+                        cursor: pointer;
+                        justify-content: center;
+
+                        &:hover {
+                            background-color: #66768E;
+                            color: #fff;
+                        }
+                    }
+                }
+
+            }
+
+            .mce-tinymce.mce-container.mce-panel {
+                border-radius: 0.5rem;
+                border: 1px solid var(--colors-components-input-outlined, rgba(145, 158, 171, 0.32));
+            } 
+        }
+
+        .custom-hr {
+            hr {
+                height: 0.0625rem;
+                border: 0;
+                width: 100%;
+                background: #E5ECF6;
+                margin: 0;
+            }
+
+            h5 {
+                color: var(--neutral-color-neutral-90, #101C2D);
+                font-size: 1.5rem;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 2.25rem;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 // small phone device
 @include q.responsive(phone) {
-    .user-profile-picture .media{
+    .user-profile-picture .media {
         padding: 1rem;
         flex-direction: column;
         margin-top: -2rem;
         text-align: center;
         align-items: center;
-        img{
-            margin: 0 auto; 
+
+        img {
+            margin: 0 auto;
             width: 6rem;
             height: 6rem;
         }
-        .media-body{
+
+        .media-body {
             top: .4rem;
-            h3{
+
+            h3 {
                 font-size: 1.5rem;
             }
-            p{
+
+            p {
                 font-size: .9rem;
             }
         }
     }
-    .user-details-box{
+
+    .user-details-box {
         padding: 1rem;
     }
-    .contact-info-box{
+
+    .contact-info-box {
         margin-top: 2rem;
         padding: 1rem;
     }
@@ -333,15 +517,15 @@
 
 // landscape phone device 
 @include q.responsive(landphone) {
-    .contact-info-box{
-        margin-top: 2rem; 
+    .contact-info-box {
+        margin-top: 2rem;
     }
 }
 
 // tablet device 
 @include q.responsive(tablet) {
-    .contact-info-box{
-        margin-top: 2rem; 
+    .contact-info-box {
+        margin-top: 2rem;
     }
 }
 
