--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -392,6 +392,56 @@
   margin-bottom: 1rem;
 }
 
+#uploaded-image {
+  display: block;
+}
+
+#image-container .upload-box {
+  border: 1px dashed var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+  border-radius: 50%;
+}
+#image-container .upload-box span {
+  display: block;
+  background-color: #F4F6F8;
+  width: 8.5rem;
+  height: 8.5rem;
+  border-radius: 50%;
+  padding: 1rem;
+  margin: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: all linear 0.3s;
+}
+#image-container .upload-box span p {
+  color: var(--text-light-disabled, #919EAB);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  margin-top: 0.5rem;
+}
+#image-container .upload-box:hover span {
+  transform: scale(1.1);
+}
+
+#closeIcon {
+  display: none;
+  cursor: pointer;
+}
+
+/* Set a fixed width and height for the image container */
+#imageContainer {
+  position: relative;
+}
+
+/* Ensure the image fits inside the container */
+#uploadedImage {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
     padding: 1rem;
