--- a/scss/user.scss
+++ b/scss/user.scss
@@ -431,7 +431,7 @@
             .mce-tinymce.mce-container.mce-panel {
                 border-radius: 0.5rem;
                 border: 1px solid var(--colors-components-input-outlined, rgba(145, 158, 171, 0.32));
-            } 
+            }
         }
 
         .custom-hr {
@@ -456,7 +456,60 @@
     }
 }
 
+#uploaded-image{
+    display: block;
+}
 
+#image-container {
+    .upload-box {
+        border: 1px dashed var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+        border-radius: 50%;
+
+        span {
+            display: block;
+            background-color: #F4F6F8;
+            width: 8.5rem;
+            height: 8.5rem;
+            border-radius: 50%;
+            padding: 1rem;
+            margin: .5rem;
+            @include m.df(center);
+            flex-direction: column;
+            transition: all linear .3s;
+
+            p {
+                color: var(--text-light-disabled, #919EAB); 
+                font-size: 0.75rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.125rem; 
+                margin-top: 0.5rem;
+            }
+        }
+        &:hover{
+            span{
+                transform: scale(1.1);
+            }
+        }
+    }
+}
+
+
+#closeIcon {
+    display: none;
+    cursor: pointer;
+}
+
+/* Set a fixed width and height for the image container */
+#imageContainer { 
+    position: relative;
+}
+
+/* Ensure the image fits inside the container */
+#uploadedImage {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 
 
