--- a/scss/user.scss
+++ b/scss/user.scss
@@ -456,7 +456,7 @@
     }
 }
 
-#uploaded-image{
+#uploaded-image {
     display: block;
 }
 
@@ -478,45 +478,106 @@
             transition: all linear .3s;
 
             p {
-                color: var(--text-light-disabled, #919EAB); 
+                color: var(--text-light-disabled, #919EAB);
                 font-size: 0.75rem;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 1.125rem; 
+                line-height: 1.125rem;
                 margin-top: 0.5rem;
             }
         }
-        &:hover{
-            span{
+
+        &:hover {
+            span {
                 transform: scale(1.1);
             }
         }
     }
 }
 
-
-#closeIcon {
-    display: none;
-    cursor: pointer;
-}
-
 /* Set a fixed width and height for the image container */
-#imageContainer { 
+#imageContainer {
     position: relative;
 }
 
 /* Ensure the image fits inside the container */
 #uploadedImage {
-    max-width: 100%;
-    max-height: 100%;
+    padding: .5rem;
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+    object-fit: cover;
+    display: none;
+    border: 1px dashed #294CFF;
 }
 
+#closeIcon {
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    left: 0;
+    top: 9px;
+    background: #ccc;
+    padding: 2px 6px;
+    border-radius: 4px;
+    font-size: 12px;
+    color: #294CFF;
+}
 
+.can-change {
+    color: var(--neutral-color-neutral-60, #66768E);
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1rem;
+    display: block;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+}
 
+.form-submit-bttns {
+    text-align: right;
 
+    .btn-cancel {
+        border-radius: 0.5rem;
+        border: 1px solid var(--neutral-color-neutral-40, #C5CCD8);
+        background: var(--neutral-color-white, #FFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        padding: .6rem 1rem;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem;
+        height: 3rem;
+        transition: all linear .3s;
 
+        &:hover {
+            background-color: #C5CCD8;
+        }
+    }
 
+    .btn-submit {
+        border-radius: 0.5rem;
+        border-radius: 0.5rem;
+        border: 1px solid var(--primary-color-blue, #294CFF);
+        background: var(--primary-color-blue, #294CFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        color: #fff;
+        padding: .6rem 1rem;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem;
+        height: 3rem;
+        transition: all linear .3s;
+        margin-left: 1rem;
 
+        &:hover {
+            background-color: #252525;
+        }
+    }
+}
 
 
 
@@ -566,12 +627,42 @@
         margin-top: 2rem;
         padding: 1rem;
     }
+
+    .user-header h2 {
+        font-size: 1.2rem;
+    }
+
+    .user-header-bttn a {
+        font-size: .8rem;
+        padding: .5rem 1rem;
+    }
+
+    .user-add-form-wrap {
+        padding: 1rem;
+    }
+
+    #imageContainer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
+
+    #image-container {
+        text-align: center;
+    }
+    .form-submit-bttns{
+        text-align: center;
+    }
 }
 
 // landscape phone device 
 @include q.responsive(landphone) {
     .contact-info-box {
         margin-top: 2rem;
+    }
+    #image-container{
+        margin-bottom: 1.5rem;
     }
 }
 
